2012-12-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/{dump.man,tkcon.1.man,tkconc.5.man}: make dtplite happy for
	the docs [Bug #47]

	* tkcon.tcl (::tkcon::Init): update to use latest /viewvc/tkcon
	url to retrieve head version of tkcon.

	* tkcon.tcl (::tkcon::InitUI): catch deiconify to prevent error
	when embedding. [Bug #44]

	* tkcon.tcl (::tkcon::ExpandMethodname): improved expansion for
	xotcl methods.  Also enhance expansion to allow break/continue
	signals to differentiate "I'm not responsible" results from "I
	don't have any results". (neumann)

	* tkcon.tcl (::tkcon::InitInterp): correct sending tkcon commands
	to user created interps [Bug #42] (kuhn)

2012-03-06  Jeff Hobbs  <jeffh@>

	* tkcon.tcl (idebug): better line handling to not use list
	functions. [Bug 111462] (goth)
	(tkcon): pass any init args to 'tkcon show'

2011-10-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: update to v2.7
	* tkcon.tcl:    Improve UI to work on OS X.  Adjust some dialogs,
	use Command- instead of Control- bindings on OS X.  Handle right
	click properly.

	* docs/license.terms: removed outdated restricted rights section.

2010-01-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* icons/*:                Added an SVG icon and .desktop file suitable
	* tkcon-console.desktop:  for use installing tkcon into the desktop
	* install-desktop-menu.sh: menus on a unix desktop. Also an install
	* tkcon.tcl:              script to show how it is done. And for
	use with 8.6 on X11 - if we can locate the icon, use it as the
	tkcon iconphoto so it shows up associated with the running app.

2010-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkcon.tcl: Make use of the extended window manager hints from
	tip 359 on unix for all the dialog windows.

2009-04-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: override 8.5 [chan puts|gets]. [Bug 1876707]

	* tkcon.tcl: update pre-8.4 private text binding refs
