@@ -1,5 +1,9 @@
 2012-12-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* tkcon.tcl (::tkcon::Bindings): minimal patch for 8.6b3+ event
+	compatibility. Larger patch to come that addresses shift towards
+	virtual events in core widgets. [Bug #48] (gollwitzer)
+
 	* docs/{dump.man,tkcon.1.man,tkconc.5.man}: make dtplite happy for
 	the docs [Bug #47]
 
